# EdgeOrchestra

./: .env.example  .gitignore  Makefile  Project.md  docker-compose.yml  pyproject.toml  setup-plan.md
control-plane/: pyproject.toml
control-plane/src/control_plane/: api_client.py  cli.py  client.py
ios-worker/: Makefile  Package.resolved  Package.swift
ios-worker/App/: Info.plist  project.yml
ios-worker/App/EdgeOrchestraApp.xcodeproj/: project.pbxproj
ios-worker/App/EdgeOrchestraApp.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios-worker/Sources/EdgeOrchestraApp/: EdgeOrchestraApp.swift
ios-worker/Sources/EdgeOrchestraApp/Views/: ConnectionView.swift  ContentView.swift  LogView.swift  MetricsView.swift  TrainingView.swift
ios-worker/Sources/EdgeOrchestraProtos/: common.grpc.swift  common.pb.swift  device.grpc.swift  device.pb.swift  heartbeat.grpc.swift  heartbeat.pb.swift  model.grpc.swift  model.pb.swift
ios-worker/Sources/EdgeOrchestraWorker/Device/: DeviceInfoCollector.swift  MetricsCollector.swift
ios-worker/Sources/EdgeOrchestraWorker/Discovery/: BonjourDiscovery.swift
ios-worker/Sources/EdgeOrchestraWorker/GRPCClient/: ApiKeyInterceptor.swift  DeviceRegistryClient.swift  HeartbeatClient.swift  ModelClient.swift  OrchestratorConnection.swift
ios-worker/Sources/EdgeOrchestraWorker/Models/: ConnectionStatus.swift  TrainingStatus.swift
ios-worker/Sources/EdgeOrchestraWorker/State/: WorkerEngine.swift  WorkerState.swift
ios-worker/Sources/EdgeOrchestraWorker/Training/: CIFAR10DataProvider.swift  CoreMLTrainer.swift  LocalTrainer.swift  MNISTDataProvider.swift  TrainingCoordinator.swift  TrainingDataProvider.swift
orchestrator/: Dockerfile  alembic.ini  pyproject.toml
orchestrator/alembic/: env.py
orchestrator/alembic/versions/: 001_create_devices_table.py  002_create_training_jobs_table.py  003_add_models_table.py
orchestrator/src/orchestrator/: config.py  main.py
orchestrator/src/orchestrator/api/: app.py  middleware.py
orchestrator/src/orchestrator/api/routes/: devices.py  health.py  metrics.py  models.py  training.py
orchestrator/src/orchestrator/dashboard/: router.py
orchestrator/src/orchestrator/dashboard/static/: dashboard.js  style.css
orchestrator/src/orchestrator/dashboard/templates/: base.html  index.html
orchestrator/src/orchestrator/dashboard/templates/partials/: devices_table.html  health.html  job_detail.html  job_info.html  job_rounds.html  job_row.html  jobs_table.html
orchestrator/src/orchestrator/db/: engine.py  models.py  repositories.py
orchestrator/src/orchestrator/discovery/: mdns.py
orchestrator/src/orchestrator/grpc_server/: device_service.py  heartbeat_service.py  interceptors.py  model_service.py  server.py
orchestrator/src/orchestrator/observability/: metrics.py
orchestrator/src/orchestrator/schemas/: device.py  model.py  training.py
orchestrator/src/orchestrator/services/: coreml_model.py  device_manager.py  device_scheduler.py  fed_avg.py  gradient_codec.py  heartbeat_monitor.py  model_registry.py  server_evaluator.py  training_coordinator.py
orchestrator/tests/: conftest.py  test_api_auth.py  test_api_devices.py  test_api_training.py  test_coreml_model.py  test_device_scheduler.py  test_fed_avg.py  test_gradient_codec.py  test_heartbeat_monitor.py  test_model_registry.py  test_models.py  test_observability.py  test_repositories.py  test_training_coordinator.py
protos/edgeorchestra/v1/: common.proto  device.proto  heartbeat.proto  model.proto
scripts/: gen-certs.sh  prepare_cifar10.py  prepare_mnist.py
worker-sim/: pyproject.toml
worker-sim/src/worker_sim/: cli.py  device_profile.py  manager.py  metrics.py  trainer.py  worker.py
