[project]
name = "edgeorchestra"
version = "0.1.0"
description = "Federated learning on Apple edge devices"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["orchestrator", "control-plane", "worker-sim"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
